--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="LITEFLIX - Your favorite movie platform."
+      content="Discover the ultimate cinematic experience with LiteFlix! Stream thousands of movies across genres, from blockbuster hits to indie gems, all in one place. Dive into a world of entertainment with LiteFlix's user-friendly platform. Start your movie marathon today!"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://use.typekit.net/ivr7dju.css">
-    <title>LITEFLIX</title>
+    <link rel="canonical" href="https://liteflixmovies.netlify.app/" />
+    <title>LITEFLIX - Your favorite movie platform</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
